# flux-sched

./: .clang-format  .configure-custom.sh  .gitignore  .mergify.yml  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  .travis.yml  .typos.toml  CMakeLists.txt  CMakePresets.json  DartConfiguration.tcl  Makefile  Makefile.am  Makefile.inc  NEWS  NEWS.md  README.md  autogen.sh  codecov.yml  config  config.h.in  configure  configure-cmake  configure.ac  flux-plugin.map  vscode.md
doc/: CMakeLists.txt  Doxyfile.in  Makefile.am  conf.py  index.rst  manpages.py  requirements.txt
doc/api/: index.rst  planner.rst  qmanager.rst  reapi.rst  resource.rst
doc/common/: stability.rst
doc/guide/: resource_query.md  resource_query.rst
doc/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/man5/: flux-config-sched-fluxion-qmanager.rst  flux-config-sched-fluxion-resource.rst  index.rst
doc/python/: complete_api.rst  index.rst
doc/test/: spell.en.pws
etc/: 01-sched-fluxion-qmanager-stop  01-sched-fluxion-resource-start  02-sched-fluxion-qmanager-start  02-sched-fluxion-qmanager-stop  02-sched-fluxion-resource-start  02-sched-fluxion-resource-stop  CMakeLists.txt  Makefile.am  fluxion-qmanager-start  fluxion-qmanager-stop  fluxion-resource-start  fluxion-resource-stop  qmanager-start  qmanager-stop  qmanager.toml  resource-start  resource-stop  sched-fluxion-qmanager-start  sched-fluxion-qmanager.toml  sched-fluxion-resource-start  sched-fluxion-resource-stop  sched-fluxion-resource.toml  sched-start  sched-stop
etc/rc1.d/: 01-sched-fluxion
etc/rc3.d/: 01-sched-fluxion
foreign/: Makefile.am
qmanager/modules/: CMakeLists.txt  Makefile.am  qmanager.cpp  qmanager_callbacks.cpp  qmanager_callbacks.hpp  qmanager_opts.cpp  qmanager_opts.hpp
rdl/: Makefile  Makefile.am  RDL.lua  cpuset-str.c  flux-rdltool.c  jansson-lua.c  jansson-lua.h  lua-cpuset.c  rdl.c  rdl.h
rdl/RDL/: Resource.lua  ResourceData.lua  memstore.lua  serialize.lua  uri.lua
rdl/test/: Makefile  Makefile.am  jansson-test.c  test-jansson.lua  test-rdl.lua  trdl.c
resource/: .gitignore  CMakeLists.txt  Makefile.am  color.cpp  color.hpp  data_std.hpp  dfu_match_cb.cpp  dfu_match_cb.hpp  dfu_match_id_based.hpp  dfu_traverse.cpp  dfu_traverse.hpp  dfu_traverse_impl.cpp  dfu_traverse_impl.hpp  edge_eval_api.cpp  edge_eval_api.hpp  fold.hpp  infra_data.cpp  infra_data.hpp  matcher.cpp  matcher.hpp  matcher_data.hpp  resource_data.cpp  resource_data.hpp  resource_gen.cpp  resource_gen.hpp  resource_gen_spec.cpp  resource_gen_spec.hpp  resource_graph.hpp  sched_data.cpp  sched_data.hpp  scoring_api.cpp  scoring_api.hpp  system_defaults.hpp
resource/config/: system_defaults.hpp
resource/doxygen/: doxy_conf.txt
resource/emitters/: match_emitters.cpp  match_emitters.hpp
resource/evaluators/: Makefile.am  edge_eval_api.cpp  edge_eval_api.hpp  expr_eval_api.cpp  expr_eval_api.hpp  expr_eval_target.hpp  expr_eval_vtx_target.cpp  expr_eval_vtx_target.hpp  fold.hpp  scoring_api.cpp  scoring_api.hpp
resource/generators/: gen.cpp  gen.hpp  spec.cpp  spec.hpp
resource/jobinfo/: jobinfo.cpp  jobinfo.hpp
resource/libjobspec/: CMakeLists.txt  Makefile.am  constraint.cpp  constraint.hpp  flux-jobspec-validate.cpp  hostlist_constraint.cpp  hostlist_constraint.hpp  jobspec.cpp  jobspec.hpp  parse_error.hpp  rank_constraint.cpp  rank_constraint.hpp
resource/modules/: CMakeLists.txt  Makefile.am  feasibility.cpp  resource.cpp  resource_match.cpp  resource_match.hpp  resource_match_opts.cpp  resource_match_opts.hpp  rquery.cpp
resource/planner/: CMakeLists.txt  Makefile.am  README.md  mintime_resource_tree.cpp  mintime_resource_tree.hpp  planner.c  planner.cpp  planner.h  planner.hpp  planner_c_interface.cpp  planner_internal_tree.hpp  planner_multi.c  planner_multi.cpp  planner_multi.h  scheduled_point_tree.cpp  scheduled_point_tree.hpp
resource/policies/: CMakeLists.txt  Makefile.am  dfu_match_cosched_aware.cpp  dfu_match_cosched_aware.hpp  dfu_match_high_id_first.cpp  dfu_match_high_id_first.hpp  dfu_match_locality.cpp  dfu_match_locality.hpp  dfu_match_low_id_first.cpp  dfu_match_low_id_first.hpp  dfu_match_multilevel_id.hpp  dfu_match_multilevel_id_impl.hpp  dfu_match_policy_factory.cpp  dfu_match_policy_factory.hpp  dfu_match_uniform_storage.cpp  dfu_match_uniform_storage.hpp  dfu_match_var_aware.cpp  dfu_match_var_aware.hpp
resource/reapi/: CMakeLists.txt
resrc/: Makefile  Makefile.am  planner.c  planner.h  resrc.c  resrc.h  resrc_api.h  resrc_api_internal.h  resrc_flow.c  resrc_flow.h  resrc_reqst.c  resrc_reqst.h  resrc_tree.c  resrc_tree.h  resrc_version.map
sched/: Makefile  Makefile.am  backfillplugin1.c  flux-submit  flux-waitjob.c  plugin.c  plugin.h  plugin_version.map  rs2rank.c  rs2rank.h  rsreader.c  rsreader.h  sched.c  sched_backfill.c  sched_fast_backfill.c  sched_fcfs.c  sched_priority.c  sched_topo.c  schedplugin1.c  schedsrv.c  schedsrv.h  scheduler.h
simulator/: Makefile  Makefile.am  parse_emulator_output.py  scheduler.c  scheduler.h  sim_execsrv.c  sim_sched_easy.c  sim_sched_easy_aware.c  sim_sched_fcfs.c  sim_sched_fcfs_aware.c  sim_schedsrv.c  sim_version.map  simsrv.c  simulator.c  simulator.h  submitsrv.c
t/: CMakeLists.txt  Makefile  Makefile.am  easy_expected  sharness.sh  t0000-sharness.t  t0001-basic.t  t0002-waitjob.t  t0003-basic-install.t  t0004-rdltool.t  t1000-jsc.t  t1001-qmanager-basic.t  t1001-rs2rank-basic.t  t1002-qmanager-reload.t  t1002-rs2rank-64ranks.t  t1003-qmanager-policy.t  t1003-stress.t  t1004-module-load.t  t1004-qmanager-optimize.t  t1005-qmanager-conf.t  t1005-sched-params.t  t1006-cancel.t  t1006-qmanager-multiqueue.t  t1006-recovery-full.t  t1007-exclude.t  t1007-recovery-full.t  t1007-recovery-partial.t  t1008-recovery-none.t  t1008-runtime-sched-params.t  t1009-recovery-multiqueue.t  t1010-sync-modules.t  t1011-dynstate-change.t  t1012-find-status.t  t1013-exclusion.t  t1013-qmanager-priority.t  t1014-annotation.t  t1015-find-format.t  t1016-nest-namespace.t  t1017-rv1-bootstrap.t  t1018-rv1-bootstrap2.t  (+120 more)
(+4202 files in other folders)
